# estivision

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/: comment_style.md
src/estivision/: app.py
src/estivision/camera/: __init__.py  calibration.py  camera_calibrator.py  camera_capture.py  camera_manager.py  camera_stream.py  frame_calibrator.py
src/estivision/gui/: main_window.py  safe_widgets.py  style_constants.py
src/estivision/pose/: __init__.py  drawing.py  pose_estimator.py  pose_preview_worker.py  pose_worker.py
tests/: model_input_type_viewer.py  model_type_viewer.py  qt_version_viewer.py  test_camera_calibrator.py  test_camera_toggle.py  test_pose_estimation.py  test_pose_image.py  test_pose_video.py  test_pose_worker.py
tools/: chessboard_generater.py  chessboard_generator.py  download_movenet_model.py  download_movenet_onnx.py
